--- a/templates/listings/listing_detail.html
+++ b/templates/listings/listing_detail.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% load listings_tags %}
+{% load static %}
 
 {% block title %}{{ listing.title }}{% endblock %}
 
